--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,160 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: 'IRANSans';
+  font-weight:none;
+  src: url('../font/Neue-Helvetica.eot') format('eot'),
+       url('../font/Neue-Helvetica.woff') format('woff'),  
+       url('../font/Neue-Helvetica.ttf') format('truetype');  
 }
 
-.App-logo {
-  height: 40vmin;
+*{
+  margin:0px;
+  padding: 0;
+  box-sizing: border-box;
+}
+body{
+  background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
+  color: white;
+  font-family: 'IRANSans', sans-serif;
+  min-height: 100vh;
+}
+header{
+  font-size: 2rem;
+  
+}
+header,form{
+  min-width: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+form input,
+form button{
+  border: none;
+  background: white;
+  
+  
+}
+
+form input{
+  width: 19rem;
+  height: 3rem;
+  font-size: 1.5rem;
+  padding: 1.5rem;
+}
+
+
+form button{
+  background: #ff6f47;
+  color: white;
+  
+  cursor: pointer;
+  transition: all 0.3 ease;
+  height: 3rem;
+  width: 5rem;
+  
+}
+
+form button:hover{
+  color: #ff6f47;
+  background: white;
+}
+.todo-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.select{
+  margin: 1rem;
+  position: relative;
+  overflow: hidden;
+}
+
+select{
+  color: #ff6f47;
+  cursor: pointer;
+  width: 12rem;
+}
+
+select{
+  -webkit-appearance:none ;
+  -moz-appearance: none;
+  -ms-apprearence:none;
+  outline: 0;
+  box-shadow: none;
+  appearance: none;
+  border: 0 !important;
+  height: 3rem;
+}
+
+.select::after{
+  content: "\25BC";
+  position: absolute;
+  top:0;
+  right:0;
+  padding: 1rem;
+  background: #ff6f47;
+  cursor: pointer;
+  pointer-events: none;
+  
+}
+
+.todo-item{
+  min-width: 100%;
+  list-style: none;
+  padding: 0px 8px;
+}
+.todo{
+  min-width: 100%;
+  margin: 0.5rem;
+  background: white;
+  font-size: 1.5rem;
+  color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: all 1s ease;
+}
+
+.todo li{
+  flex: 1;
+}
+.filter-todo{
+  padding: 1rem;
+}
+.fa-check .fa-trash{
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.fall{
+  transform: translate(10rem) rotateZ(20deg);
+  opacity: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.completed{
+  text-decoration: line-through;
+  opacity: 0.5;
+}
+
+.todo.item{
+  padding: 0rem 0.5rem;
+}
+
+.trash-btn, .complete-btn{
+  background: #ff6f47;
   color: white;
+  border: none;
+  padding: 1rem;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.complete-btn{
+  background: rgb(11, 212, 162);
 }
+.error{
+  color:red;
+  text-align: center;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
